Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116295

Qt build with SSL3, is not picking up SSL3

    XMLWordPrintable

Details

    • macOS
    • 3159b337f (dev), 1b4301c97 (6.6), a913fb4d4 (tqtc/lts-6.5)

    Description

      Even when Qt is build with SSL3 using following configuration:

      configure -top-level -commercial -confirm-license -system-proxies -release -force-debug-info -nomake examples -nomake tests -no-icu -openssl-runtime -I/opt/myssl-3.0.10.8.0.54-dynamic-amd64-bin/include -L/opt/myssl-3.0.10.8.0.54-dynamic-amd64-bin/lib/ --prefix=/blabla/qt5.15.14 QMAKE_CXXFLAGS+=-std=c++1z QMAKE_MACOSX_DEPLOYMENT_TARGET=10.14

      But when application is build and run it throws this error:

      qt.network.ssl: Incompatible version of OpenSSL (built with OpenSSL >= 3.x, runtime version is < 3.x)

      This works fine on windows but does not on Mac (catalina) 

      Adding path DYLD_LIBRARY_PATH=/opt/myssl-xxx makes it work

      But when Qt5.15.11 is build with same configuration,. application works without any problem without explicitly adding SSL3 in DYLD_LIBRARY_PATH.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes