Openssl V3: try to work around the lack of SHLIB_VERSION_NUMBER

It's no more defined in opensslv.h, try to use OPENSSL_SHLIB_VERSION
instead.

Pick-to: 6.5
Fixes: QTBUG-116295
Change-Id: Ie465f4147e0ec95897bd8d35f71241884bf64b4e
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit 3159b337f01767412f51c649d30a72ac8417989b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>